docker/Kubernetes-101/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fast-api
  labels:
    app: fast-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fast-api
  template:
    metadata:
      labels:
        app: fast-api
    spec:
      containers:
        - name: fast-api
          image: ashif8984/k8s-getting-started:0.0.2
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 200m
              memory: 300Mi
            limits:
              memory: 400Mi
