docker/Kubernetes-101/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fast-api
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: fast-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
