docker/Kubernetes-101/kubernetes/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fast-api
spec:
  rules:
    - host: my-app.info
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: fast-api
                port:
                  number: 80
